# hades

./: .gitignore  daily_trader.py  export_trades.py  pyproject.toml  refresh.py  run_backtest.py  serve.py  speedrun.sh
analysis/: backtest.py  vol_analysis.py
app/: dashboard.py  pricing_live.py  server.py
backtest/: costs.py  engine.py  metrics.py  panel.py  strategies.py
data/: streaming_dataset.py
data/download/: insights.py  market_cap.py  options.py  stocks.py
ml/: backtest.py  model.py  trainer.py
portfolio/: ledger.py  nav.py  performance.py  snapshot.py
strategy/: exits.py  momentum.py  pricing.py  spreads.py
