[project]
name = "hades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.23",
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "tqdm>=4.68.1",
    "uvicorn>=0.49.0",
    "torch>=2.3.0",
    "xlsxwriter>=3.2.9",
]
